--- a/user-detail-umkm.html
+++ b/user-detail-umkm.html
@@ -250,6 +250,65 @@
       font-weight: 700;
       color: #fff;
     }
+    @media (max-width: 1024px) {
+      .detail-container {
+        flex-direction: column;
+      }
+
+      .detail-left {
+        min-height: auto;
+        padding: 30px 20px;
+      }
+
+      .illustration {
+        display: none;
+      }
+
+      .detail-logo {
+        margin-top: 40px;
+        margin-bottom: 20px;
+      }
+
+      .detail-brand {
+        font-size: 36px;
+      }
+
+      .detail-tagline {
+        font-size: 16px;
+      }
+
+      .detail-right {
+        padding: 30px 20px;
+      }
+
+      .welcome-heading {
+        font-size: 32px;
+      }
+    }
+    @media (max-width: 768px) {
+      .back-button {
+        top: 30px;
+        left: 20px;
+      }
+
+      .back-button-detail {
+        top: 20px;
+        left: 20px;
+      }
+
+      .detail-brand {
+        font-size: 28px;
+      }
+
+      .welcome-heading {
+        font-size: 28px;
+      }
+
+      .radio-group {
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
   </style>
 
   <body>
