--- a/certification.html
+++ b/certification.html
@@ -1,73 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skill2Earn - Certification</title>
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <!-- <link rel="stylesheet" href="style.css"> -->
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>certification</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f9fa;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .home-body {
+      background-color: #e8ecef;
+      display: block;
+      align-items: flex-start;
+    }
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      background: linear-gradient(135deg, #0066cc 0%, #0052a3 100%);
+      padding: 15px 0;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0, 102, 204, 0.2);
+    }
 
-<body class="home-body">
+    .nav-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .nav-brand {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      margin: 0;
+    }
+
+    .skill-nav {
+      color: #fff;
+    }
+
+    .two-nav {
+      color: #7dd3c0;
+    }
+
+    .earn-nav {
+      color: #fff;
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 40px;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-logo a {
+      text-decoration: none;
+    }
+
+    .nav-logo a:hover .nav-brand {
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-link:hover {
+      opacity: 0.8;
+    }
+
+    .nav-actions {
+      display: flex;
+      gap: 15px;
+    }
+
+    .profile-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+    }
+
+    .profile-btn,
+    .logout-btn {
+      background-color: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .profile-btn:hover,
+    .logout-btn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translateY(-2px);
+    }
+    @media (max-width: 768px) {
+      .nav-container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 20px;
+      }
+
+      .nav-menu {
+        flex-direction: column;
+        gap: 15px;
+        text-align: center;
+      }
+
+      .nav-actions {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+    .certification-container {
+      max-width: 900px;
+      margin: 110px auto 0 auto;
+      background: #fff;
+      border-radius: 32px;
+      padding: 36px 36px 54px 36px;
+      box-shadow: 0 6px 36px rgba(0, 0, 0, 0.07);
+      text-align: center;
+    }
+
+    .certification-title {
+      font-size: 2.4em;
+      font-weight: 900;
+      color: #222;
+      margin-bottom: 38px;
+      line-height: 1.3;
+    }
+
+    .certification-row {
+      display: flex;
+      gap: 70px;
+      align-items: flex-start;
+      justify-content: center;
+      margin-bottom: 60px;
+    }
+
+    .certification-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 18px;
+      flex: 1;
+    }
+
+    .certification-img {
+      border-radius: 18px;
+      width: 100%;
+      max-width: 340px;
+      height: 220px;
+      box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12);
+      background: #f8f9fa;
+      display: block;
+    }
+    .certification-label {
+      font-size: 1.5em;
+      font-weight: 700;
+      color: #222;
+      margin-top: 7px;
+    }
+    .certification-btn {
+      margin: 28px auto 0 auto;
+      background-color: #0066cc;
+      color: #fff;
+      font-size: 1.18em;
+      font-weight: 700;
+      border-radius: 14px;
+      width: 30%;
+      min-width: 240px;
+      border: none;
+      padding: 19px 0;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
+      display: block;
+    }
+
+    .certification-btn:hover {
+      background: #0052a3;
+      transform: translateY(-2px);
+    }
+  </style>
+
+  <body class="home-body">
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <a href="homeAfter.html" style="text-decoration: none;">
-                    <h1 class="nav-brand">
-                        <span class="skill-nav">Skill</span><span class="two-nav">2</span><span
-                            class="earn-nav">Earn</span>
-                    </h1>
-                </a>
-            </div>
-
-            <div class="nav-menu">
-                <a href="homeAfter.html#micro-course" class="nav-link">Micro-Course</a>
-                <a href="homeAfter.html#tasks-list" class="nav-link">Tasks List</a>
-                <a href="#ongoing-tasksA.html" class="nav-link">Ongoing Tasks</a>
-            </div>
-
-            <div class="nav-actions">
-                <a href="profile2.html" class="profile-btn">
-                    Profile
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <circle cx="12" cy="8" r="4" fill="white" />
-                        <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7" stroke="white" stroke-width="2" fill="none" />
-                    </svg>
-                </a>
-
-                <a href="index.html" class="logout-btn">
-                    Logout
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9" stroke="white"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </a>
-            </div>
+      <div class="nav-container">
+        <div class="nav-logo">
+          <a href="homeAfter.html" style="text-decoration: none">
+            <h1 class="nav-brand">
+              <span class="skill-nav">Skill</span><span class="two-nav">2</span
+              ><span class="earn-nav">Earn</span>
+            </h1>
+          </a>
         </div>
+
+        <div class="nav-menu">
+          <a href="homeAfter.html#micro-course" class="nav-link"
+            >Micro-Course</a
+          >
+          <a href="homeAfter.html#tasks-list" class="nav-link">Tasks List</a>
+          <a href="#ongoing-tasksA.html" class="nav-link">Ongoing Tasks</a>
+        </div>
+
+        <div class="nav-actions">
+          <a href="profile2.html" class="profile-btn">
+            Profile
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <circle cx="12" cy="8" r="4" fill="white" />
+              <path
+                d="M4 20c0-4 3.6-7 8-7s8 3 8 7"
+                stroke="white"
+                stroke-width="2"
+                fill="none"
+              />
+            </svg>
+          </a>
+
+          <a href="index.html" class="logout-btn">
+            Logout
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
     </nav>
 
     <div class="certification-container">
-        <h1 class="certification-title">
-            Congratulations you have just <br>
-            finished the training for copywriting <br>
-            enjoy your certificate and badge
-        </h1>
-        <div class="certification-row">
-            <div class="certification-card">
-                <img src="assets/img/certificate.png" alt="Certificate" class="certification-img">
-                <div class="certification-label">Certificate</div>
-            </div>
-            <div class="certification-card">
-                <img src="assets/img/badge3.png" alt="Badge" class="certification-img">
-                <div class="certification-label">Badge</div>
-            </div>
+      <h1 class="certification-title">
+        Congratulations you have just <br />
+        finished the training for copywriting <br />
+        enjoy your certificate and badge
+      </h1>
+      <div class="certification-row">
+        <div class="certification-card">
+          <img
+            src="assets/img/certificate.png"
+            alt="Certificate"
+            class="certification-img"
+          />
+          <div class="certification-label">Certificate</div>
         </div>
-        <a href="homeAfter.html" style="text-decoration: none;">
-            <button class="certification-btn">Continue</button>
-        </a>
+        <div class="certification-card">
+          <img
+            src="assets/img/badge3.png"
+            alt="Badge"
+            class="certification-img"
+          />
+          <div class="certification-label">Badge</div>
+        </div>
+      </div>
+      <a href="homeAfter.html" style="text-decoration: none">
+        <button class="certification-btn">Continue</button>
+      </a>
     </div>
-
-</body>
-
+  </body>
 </html>
