--- a/gate.html
+++ b/gate.html
@@ -1,84 +1,380 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skill2Earn - Gate</title>
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gate</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f9fa;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      background: linear-gradient(135deg, #0066cc 0%, #0052a3 100%);
+      padding: 15px 0;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0, 102, 204, 0.2);
+    }
 
-<body class="home-body">
+    .nav-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .nav-brand {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      margin: 0;
+    }
+
+    .skill-nav {
+      color: #fff;
+    }
+
+    .two-nav {
+      color: #7dd3c0;
+    }
+
+    .earn-nav {
+      color: #fff;
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 40px;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-logo a {
+      text-decoration: none;
+    }
+
+    .nav-logo a:hover .nav-brand {
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-link:hover {
+      opacity: 0.8;
+    }
+
+    .nav-actions {
+      display: flex;
+      gap: 15px;
+    }
+
+    .profile-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+    }
+
+    .profile-btn,
+    .logout-btn {
+      background-color: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .profile-btn:hover,
+    .logout-btn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translateY(-2px);
+    }
+    @media (max-width: 768px) {
+      .nav-container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 20px;
+      }
+
+      .nav-menu {
+        flex-direction: column;
+        gap: 15px;
+        text-align: center;
+      }
+
+      .nav-actions {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+    home-body {
+      background-color: #e8ecef;
+      display: block;
+      align-items: flex-start;
+    }
+    .gate-wrapper {
+      max-width: 700px;
+      margin: 120px auto 0 auto;
+      background: #fff;
+      border-radius: 24px;
+      padding: 38px 38px 38px 38px;
+      box-shadow: 0 8px 36px rgba(0, 0, 0, 0.05);
+    }
+    .gate-form {
+      display: flex;
+      flex-direction: column;
+      gap: 38px;
+    }
+
+    .gate-question {
+      margin-bottom: 0;
+    }
+
+    .gate-label {
+      font-size: 2em;
+      color: #111;
+      font-weight: 900;
+      margin-bottom: 14px;
+      display: block;
+    }
+
+    .gate-input {
+      width: 100%;
+      border-radius: 16px;
+      background: #f5f6f7;
+      font-size: 1.3em;
+      color: #222;
+      font-weight: 500;
+      border: none;
+      box-shadow: 0 0 0 2px #f0f0f0;
+      margin-top: 18px;
+      margin-bottom: 0;
+      padding: 22px 24px;
+      outline: none;
+      transition: box-shadow 0.2s;
+    }
+
+    .gate-input:focus {
+      box-shadow: 0 0 0 2px #0066cc;
+    }
+
+    .gate-btn {
+      display: block;
+      margin: 44px auto 0 auto;
+      background: #0066cc;
+      color: #fff;
+      font-size: 1.3em;
+      font-weight: 700;
+      border-radius: 14px;
+      border: none;
+      width: 340px;
+      padding: 20px 0;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
+    }
+
+    .gate-btn:hover {
+      background: #0052a3;
+      transform: translateY(-2px);
+    }
+
+    .popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(30, 30, 30, 0.18);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+
+    .popup-score-card {
+      background: #e8ecef;
+      border-radius: 40px;
+      padding: 70px 18px 48px 18px;
+      max-width: 410px;
+      width: 96%;
+      box-shadow: 0 6px 48px rgba(0, 0, 0, 0.07);
+      text-align: center;
+    }
+
+    .popup-title {
+      font-size: 3.2em;
+      font-weight: 800;
+      margin-bottom: 36px;
+      color: #222;
+    }
+
+    .popup-score {
+      font-size: 2.4em;
+      font-weight: 500;
+      margin-bottom: 54px;
+      color: #111;
+    }
+
+    .popup-btn {
+      background: #0066cc;
+      color: #fff;
+      font-size: 1.2em;
+      padding: 18px 0;
+      width: 85%;
+      min-width: 190px;
+      border: none;
+      border-radius: 14px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background 0.2s, transform 0.2s;
+    }
+
+    .popup-btn:hover {
+      background: #0052a3;
+      transform: translateY(-1px);
+    }
+  </style>
+
+  <body class="home-body">
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <a href="home.html" style="text-decoration: none;">
-                    <h1 class="nav-brand">
-                        <span class="skill-nav">Skill</span><span class="two-nav">2</span><span
-                            class="earn-nav">Earn</span>
-                    </h1>
-                </a>
-            </div>
-
-            <div class="nav-menu">
-                <a href="home.html#micro-course" class="nav-link">Micro-Course</a>
-                <a href="home.html#tasks-list" class="nav-link">Tasks List</a>
-                <a href="#ongoing-tasks" class="nav-link">Ongoing Tasks</a>
-            </div>
-
-            <div class="nav-actions">
-                <a href="profile.html" class="profile-btn">
-                    Profile
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <circle cx="12" cy="8" r="4" fill="white" />
-                        <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7" stroke="white" stroke-width="2" fill="none" />
-                    </svg>
-                </a>
-
-                <a href="index.html" class="logout-btn">
-                    Logout
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9" stroke="white"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </a>
-            </div>
+      <div class="nav-container">
+        <div class="nav-logo">
+          <a href="home.html" style="text-decoration: none">
+            <h1 class="nav-brand">
+              <span class="skill-nav">Skill</span><span class="two-nav">2</span
+              ><span class="earn-nav">Earn</span>
+            </h1>
+          </a>
         </div>
+
+        <div class="nav-menu">
+          <a href="home.html#micro-course" class="nav-link">Micro-Course</a>
+          <a href="home.html#tasks-list" class="nav-link">Tasks List</a>
+          <a href="#ongoing-tasks" class="nav-link">Ongoing Tasks</a>
+        </div>
+
+        <div class="nav-actions">
+          <a href="profile.html" class="profile-btn">
+            Profile
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <circle cx="12" cy="8" r="4" fill="white" />
+              <path
+                d="M4 20c0-4 3.6-7 8-7s8 3 8 7"
+                stroke="white"
+                stroke-width="2"
+                fill="none"
+              />
+            </svg>
+          </a>
+
+          <a href="index.html" class="logout-btn">
+            Logout
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
     </nav>
 
     <div class="gate-wrapper">
-        <form class="gate-form">
-            <div class="gate-question">
-                <label class="gate-label" for="answer1"><strong>1. What are the rules in copywriting?</strong></label>
-                <input type="text" id="answer1" name="answer1" class="gate-input" placeholder="Answer">
-            </div>
-            <div class="gate-question">
-                <label class="gate-label" for="answer2"><strong>2. What is a Call to Action (CTA), and why is it
-                        important?</strong></label>
-                <input type="text" id="answer2" name="answer2" class="gate-input" placeholder="Answer">
-            </div>
-            <div class="gate-question">
-                <label class="gate-label" for="answer3"><strong>3. How do you identify a target
-                        audience?</strong></label>
-                <input type="text" id="answer3" name="answer3" class="gate-input" placeholder="Answer">
-            </div>
-            <button type="submit" class="gate-btn">Submit</button>
-        </form>
-
-        <div class="popup-overlay" id="score-popup">
-            <div class="popup-score-card">
-                <h1 class="popup-title">Your Score</h1>
-                <div class="popup-score">80/100</div>
-                <a href="certification.html" style="text-decoration: none;">
-                    <button class="popup-btn" onclick="closeScorePopup()">Confirm</button>
-                </a>
-            </div>
+      <form class="gate-form">
+        <div class="gate-question">
+          <label class="gate-label" for="answer1"
+            ><strong>1. What are the rules in copywriting?</strong></label
+          >
+          <input
+            type="text"
+            id="answer1"
+            name="answer1"
+            class="gate-input"
+            placeholder="Answer"
+          />
         </div>
+        <div class="gate-question">
+          <label class="gate-label" for="answer2"
+            ><strong
+              >2. What is a Call to Action (CTA), and why is it
+              important?</strong
+            ></label
+          >
+          <input
+            type="text"
+            id="answer2"
+            name="answer2"
+            class="gate-input"
+            placeholder="Answer"
+          />
+        </div>
+        <div class="gate-question">
+          <label class="gate-label" for="answer3"
+            ><strong>3. How do you identify a target audience?</strong></label
+          >
+          <input
+            type="text"
+            id="answer3"
+            name="answer3"
+            class="gate-input"
+            placeholder="Answer"
+          />
+        </div>
+        <button type="submit" class="gate-btn">Submit</button>
+      </form>
+
+      <div class="popup-overlay" id="score-popup">
+        <div class="popup-score-card">
+          <h1 class="popup-title">Your Score</h1>
+          <div class="popup-score">80/100</div>
+          <a href="certification.html" style="text-decoration: none">
+            <button class="popup-btn" onclick="closeScorePopup()">
+              Confirm
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
-
-</body>
-
+  </body>
 </html>
