--- a/ongoingTasksB.html
+++ b/ongoingTasksB.html
@@ -1,93 +1,343 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skill2Earn - Ongoing Tasks</title>
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ongoing Tasks</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f9fa;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .home-body {
+      background-color: #e8ecef;
+      display: block;
+      align-items: flex-start;
+    }
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      background: linear-gradient(135deg, #0066cc 0%, #0052a3 100%);
+      padding: 15px 0;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0, 102, 204, 0.2);
+    }
 
-<body class="home-body">
+    .nav-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
 
+    .nav-brand {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      margin: 0;
+    }
+
+    .skill-nav {
+      color: #fff;
+    }
+
+    .two-nav {
+      color: #7dd3c0;
+    }
+
+    .earn-nav {
+      color: #fff;
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 40px;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-logo a {
+      text-decoration: none;
+    }
+
+    .nav-logo a:hover .nav-brand {
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-link:hover {
+      opacity: 0.8;
+    }
+
+    .nav-actions {
+      display: flex;
+      gap: 15px;
+    }
+
+    .profile-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+    }
+
+    .profile-btn,
+    .logout-btn {
+      background-color: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .profile-btn:hover,
+    .logout-btn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translateY(-2px);
+    }
+    @media (max-width: 768px) {
+      .nav-container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 20px;
+      }
+
+      .nav-menu {
+        flex-direction: column;
+        gap: 15px;
+        text-align: center;
+      }
+
+      .nav-actions {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+    .section-ongoing {
+      border-radius: 20px;
+      overflow: hidden;
+      margin-bottom: 40px;
+    }
+    .ongoing-top {
+      background-color: #d5dce0;
+      padding: 40px;
+      padding-top: 100px;
+      min-height: 320px;
+    }
+
+    .section-title {
+      font-size: 42px;
+      font-weight: 700;
+      color: #1a1a1a;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .loading-icon {
+      animation: rotate 1.2s linear infinite;
+      transform-origin: center;
+    }
+    .ongoing-empty {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 220px;
+    }
+
+    .ongoing-message {
+      font-size: 24px;
+      color: #8d8d8d;
+      text-align: center;
+      max-width: 700px;
+      line-height: 1.5;
+    }
+    .ongoing-bottom {
+      background-color: #ffffff;
+      padding: 40px;
+      min-height: 320px;
+    }
+    .completed-empty {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 220px;
+    }
+
+    .completed-message {
+      font-size: 24px;
+      color: #8d8d8d;
+      text-align: center;
+      max-width: 700px;
+      line-height: 1.5;
+    }
+    .loading-icon {
+      animation: rotate 1.2s linear infinite;
+      transform-origin: center;
+    }
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+
+  <body class="home-body">
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <a href="home.html" style="text-decoration: none;">
-                    <h1 class="nav-brand">
-                        <span class="skill-nav">Skill</span><span class="two-nav">2</span><span
-                            class="earn-nav">Earn</span>
-                    </h1>
-                </a>
-            </div>
-
-            <div class="nav-menu">
-                <a href="home.html#micro-course" class="nav-link">Micro-Course</a>
-                <a href="home.html#tasks-list" class="nav-link">Tasks List</a>
-                <a href="#ongoing-tasks" class="nav-link">Ongoing Tasks</a>
-            </div>
-
-            <div class="nav-actions">
-                <a href="profile.html" class="profile-btn">
-                    Profile
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <circle cx="12" cy="8" r="4" fill="white" />
-                        <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7" stroke="white" stroke-width="2" fill="none" />
-                    </svg>
-                </a>
-
-                <a href="index.html" class="logout-btn">
-                    Logout
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9" stroke="white"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </a>
-            </div>
+      <div class="nav-container">
+        <div class="nav-logo">
+          <a href="home.html" style="text-decoration: none">
+            <h1 class="nav-brand">
+              <span class="skill-nav">Skill</span><span class="two-nav">2</span
+              ><span class="earn-nav">Earn</span>
+            </h1>
+          </a>
         </div>
+
+        <div class="nav-menu">
+          <a href="home.html#micro-course" class="nav-link">Micro-Course</a>
+          <a href="home.html#tasks-list" class="nav-link">Tasks List</a>
+          <a href="#ongoing-tasks" class="nav-link">Ongoing Tasks</a>
+        </div>
+
+        <div class="nav-actions">
+          <a href="profile.html" class="profile-btn">
+            Profile
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <circle cx="12" cy="8" r="4" fill="white" />
+              <path
+                d="M4 20c0-4 3.6-7 8-7s8 3 8 7"
+                stroke="white"
+                stroke-width="2"
+                fill="none"
+              />
+            </svg>
+          </a>
+
+          <a href="index.html" class="logout-btn">
+            Logout
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
     </nav>
 
     <!-- Ongoing Tasks Section -->
     <section id="ongoing-tasks" class="section-ongoing">
-        <!-- Bagian atas (abu-abu) -->
-        <div class="ongoing-top">
-            <h2 class="section-title">
-                Ongoing Tasks
-                <svg class="loading-icon" width="28" height="28" viewBox="0 0 24 24" fill="none">
-                    <circle cx="12" cy="12" r="10" stroke="#0066CC" stroke-width="3" opacity="0.3" />
-                    <path d="M12 2a10 10 0 0 1 10 10" stroke="#0066CC" stroke-width="3" stroke-linecap="round" />
-                </svg>
-            </h2>
+      <!-- Bagian atas (abu-abu) -->
+      <div class="ongoing-top">
+        <h2 class="section-title">
+          Ongoing Tasks
+          <svg
+            class="loading-icon"
+            width="28"
+            height="28"
+            viewBox="0 0 24 24"
+            fill="none"
+          >
+            <circle
+              cx="12"
+              cy="12"
+              r="10"
+              stroke="#0066CC"
+              stroke-width="3"
+              opacity="0.3"
+            />
+            <path
+              d="M12 2a10 10 0 0 1 10 10"
+              stroke="#0066CC"
+              stroke-width="3"
+              stroke-linecap="round"
+            />
+          </svg>
+        </h2>
 
-            <div class="ongoing-empty">
-                <p class="ongoing-message">
-                    Complete micro-course of any skill you’re interested in to start
-                    accepting tasks!
-                </p>
-            </div>
+        <div class="ongoing-empty">
+          <p class="ongoing-message">
+            Complete micro-course of any skill you’re interested in to start
+            accepting tasks!
+          </p>
         </div>
+      </div>
 
-        <!-- Bagian bawah (putih) seperti Completed Tasks) -->
-        <div class="ongoing-bottom">
-            <h2 class="section-title">
-                Completed Tasks
-                <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                    <path d="M5 13l4 4L19 7" stroke="#1A73E8" stroke-width="3" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                    <rect x="3" y="3" width="18" height="18" rx="3" stroke="#1A73E8" stroke-width="2" />
-                </svg>
-            </h2>
+      <!-- Bagian bawah (putih) seperti Completed Tasks) -->
+      <div class="ongoing-bottom">
+        <h2 class="section-title">
+          Completed Tasks
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
+            <path
+              d="M5 13l4 4L19 7"
+              stroke="#1A73E8"
+              stroke-width="3"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <rect
+              x="3"
+              y="3"
+              width="18"
+              height="18"
+              rx="3"
+              stroke="#1A73E8"
+              stroke-width="2"
+            />
+          </svg>
+        </h2>
 
-            <div class="completed-empty">
-                <p class="completed-message">
-                    Complete micro-course of any skill you’re interested in to start
-                    accepting tasks!
-                </p>
-            </div>
+        <div class="completed-empty">
+          <p class="completed-message">
+            Complete micro-course of any skill you’re interested in to start
+            accepting tasks!
+          </p>
         </div>
+      </div>
     </section>
-
-</body>
-
+  </body>
 </html>
