--- a/upload-task.html
+++ b/upload-task.html
@@ -3,16 +3,351 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile - Skill2Earn</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Skill2Earn - Profile</title>
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Arial, sans-serif;
+      background-color: #f8f9fa;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .home-body {
+      background-color: #e8ecef;
+      display: block;
+      align-items: flex-start;
+    }
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      background: linear-gradient(135deg, #0066cc 0%, #0052a3 100%);
+      padding: 15px 0;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0, 102, 204, 0.2);
+    }
+
+    .nav-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .nav-brand {
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: -1px;
+      margin: 0;
+    }
+
+    .skill-nav {
+      color: #fff;
+    }
+
+    .two-nav {
+      color: #7dd3c0;
+    }
+
+    .earn-nav {
+      color: #fff;
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 40px;
+    }
+
+    .nav-link {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-logo a {
+      text-decoration: none;
+    }
+
+    .nav-logo a:hover .nav-brand {
+      opacity: 0.8;
+      transition: opacity 0.3s ease;
+    }
+
+    .nav-link:hover {
+      opacity: 0.8;
+    }
+
+    .nav-actions {
+      display: flex;
+      gap: 15px;
+    }
+
+    .profile-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+    }
+
+    .profile-btn,
+    .logout-btn {
+      background-color: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .profile-btn:hover,
+    .logout-btn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translateY(-2px);
+    }
+    @media (max-width: 768px) {
+      .nav-container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 20px;
+      }
+
+      .nav-menu {
+        flex-direction: column;
+        gap: 15px;
+        text-align: center;
+      }
+
+      .nav-actions {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+    .profile-main {
+      max-width: 1200px;
+      margin: 40px auto 60px;
+      padding: 0 40px;
+    }
+
+    .profile-card {
+      background-color: #ffffff;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.03);
+    }
+    .profile-top {
+      display: flex;
+      align-items: center; /* tadinya flex-start */
+      gap: 30px;
+      position: relative;
+    }
+    .profile-picture {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background-color: #cbd5e0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+
+    .profile-picture svg {
+      width: 100%;
+      height: 100%;
+    }
+    .profile-header {
+      flex: 1;
+    }
+
+    .profile-meta {
+      font-size: 14px;
+      color: #6c757d;
+      margin-bottom: 4px;
+    }
+
+    .profile-name {
+      font-size: 32px;
+      font-weight: 700;
+      color: #222;
+      margin-bottom: 14px;
+    }
+    .profile-edit-btn {
+      position: absolute;
+      top: 10px;
+      right: 0;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 6px;
+      border-radius: 999px;
+      transition: background 0.2s ease;
+    }
+
+    .profile-edit-btn:hover {
+      background-color: #f1f3f4;
+    }
+    .profile-section-block {
+      margin-top: 32px;
+    }
+
+    .profile-section-title {
+      font-size: 20px;
+      font-weight: 700;
+      color: #222;
+      margin-bottom: 12px;
+    }
+
+    .profile-description-text {
+      font-size: 15px;
+      line-height: 1.7;
+      color: #555;
+    }
+    .skills-tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .skill-pill {
+      background-color: #f1f3f4;
+      border-radius: 999px;
+      padding: 10px 22px;
+      font-size: 14px;
+      color: #444;
+      font-weight: 500;
+    }
+    .portfolio-files {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
+      margin-bottom: 24px;
+    }
+
+    .file-chip {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
+      border-radius: 999px;
+      border: none;
+      background-color: #f1f3f4;
+      font-size: 14px;
+      color: #444;
+      cursor: pointer;
+      transition: background 0.2s ease, transform 0.1s ease;
+    }
+
+    .file-chip:hover {
+      background-color: #e6eaee;
+      transform: translateY(-1px);
+    }
+    .mode-create-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 24px;
+      gap: 20px;
+    }
+    .mode-row {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .mode-label {
+      font-size: 15px;
+      font-weight: 600;
+      color: #222;
+    }
+    .mode-selector {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
+
+    .mode-option input {
+      display: none;
+    }
+
+    .mode-option {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+    }
+
+    .mode-circle {
+      width: 26px;
+      height: 26px;
+      border-radius: 50%;
+      border: 2px solid #b3b3b3;
+      background: transparent;
+      transition: 0.2s;
+    }
+
+    .mode-option input:checked + .mode-circle {
+      background: #0052cc;
+      border-color: #0052cc;
+    }
+
+    .mode-text {
+      font-size: 15px;
+      color: #555;
+    }
+    .btn-create {
+      margin-left: auto; /* dorong ke paling kanan */
+      margin-top: 20px;
+      padding: 12px 36px;
+      background: #0052cc; /* biru seperti desain */
+      color: #ffffff;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+      font-weight: 600;
+      text-decoration: none;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
+      transition: background 0.2s ease, transform 0.2s ease,
+        box-shadow 0.2s ease;
+    }
+
+    .btn-create:hover {
+      background: #0041a8;
+      transform: translateY(-1px);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.18);
+    }
+  </style>
 
   <body class="home-body">
     <!-- Navigation Bar -->
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-logo">
-          <a href="home.html" style="text-decoration: none">
+          <a href="umkm-home.html" style="text-decoration: none">
             <h1 class="nav-brand">
               <span class="skill-nav">Skill</span><span class="two-nav">2</span
               ><span class="earn-nav">Earn</span>
@@ -21,7 +356,7 @@
         </div>
 
         <div class="nav-menu">
-          <a href="home.html#tasks-list" class="nav-link">Tasks List</a>
+          <a href="umkm-task.html" class="nav-link">Tasks List</a>
         </div>
 
         <div class="nav-actions">
